--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,808 @@
-h1 {
-	color: green;
+/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+/**
+ * 1. Set default font family to sans-serif.
+ * 2. Prevent iOS and IE text size adjust after device orientation change,
+ *    without disabling user zoom.
+ */
+html {
+  font-family: sans-serif;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
 }
+
+/**
+ * Remove default margin.
+ */
+body {
+  margin: 0;
+}
+
+/* HTML5 display definitions
+   ========================================================================== */
+/**
+ * Correct `block` display not defined for any HTML5 element in IE 8/9.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11
+ * and Firefox.
+ * Correct `block` display not defined for `main` in IE 11.
+ */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+/**
+ * 1. Correct `inline-block` display not defined in IE 8/9.
+ * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
+ */
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9/10.
+ * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
+ */
+[hidden],
+template {
+  display: none;
+}
+
+/* Links
+   ========================================================================== */
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * Improve readability of focused elements when they are also in an
+ * active/hover state.
+ */
+a:active,
+a:hover {
+  outline: 0;
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ */
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+ */
+b,
+strong {
+  font-weight: bold;
+}
+
+/**
+ * Address styling not present in Safari and Chrome.
+ */
+dfn {
+  font-style: italic;
+}
+
+/**
+ * Address variable `h1` font-size and margin within `section` and `article`
+ * contexts in Firefox 4+, Safari, and Chrome.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/**
+ * Address styling not present in IE 8/9.
+ */
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+/**
+ * Address inconsistent and variable font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove border when inside `a` element in IE 8/9/10.
+ */
+img {
+  border: 0;
+}
+
+/**
+ * Correct overflow not hidden in IE 9/10/11.
+ */
+svg:not(:root) {
+  overflow: hidden;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * Address margin not present in IE 8/9 and Safari.
+ */
+figure {
+  margin: 1em 40px;
+}
+
+/**
+ * Address differences between Firefox and other browsers.
+ */
+hr {
+  box-sizing: content-box;
+  height: 0;
+}
+
+/**
+ * Contain overflow in all browsers.
+ */
+pre {
+  overflow: auto;
+}
+
+/**
+ * Address odd `em`-unit font size rendering in all browsers.
+ */
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * Known limitation: by default, Chrome and Safari on OS X allow very limited
+ * styling of `select`, unless a `border` property is set.
+ */
+/**
+ * 1. Correct color not being inherited.
+ *    Known issue: affects color of disabled elements.
+ * 2. Correct font properties not being inherited.
+ * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+  margin: 0;
+  /* 3 */
+}
+
+/**
+ * Address `overflow` set to `hidden` in IE 8/9/10/11.
+ */
+button {
+  overflow: visible;
+}
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
+ * Correct `select` style inheritance in Firefox.
+ */
+button,
+select {
+  text-transform: none;
+}
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ */
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */
+}
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+
+/**
+ * Remove inner padding and border in Firefox 4+.
+ */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/**
+ * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+input {
+  line-height: normal;
+}
+
+/**
+ * It's recommended that you don't attempt to style these elements.
+ * Firefox's implementation doesn't respect box-sizing, padding, or width.
+ *
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
+ */
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Fix the cursor style for Chrome's increment/decrement buttons. For certain
+ * `font-size` values of the `input`, it causes the cursor style of the
+ * decrement button to change from `default` to `text`.
+ */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
+ */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  box-sizing: content-box;
+  /* 2 */
+}
+
+/**
+ * Remove inner padding and search cancel button in Safari and Chrome on OS X.
+ * Safari (but not Chrome) clips the cancel button when the search input has
+ * padding (and `textfield` appearance).
+ */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * Define consistent border, margin, and padding.
+ */
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+/**
+ * 1. Correct `color` not being inherited in IE 8/9/10/11.
+ * 2. Remove padding so people aren't caught out if they zero out fieldsets.
+ */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Remove default vertical scrollbar in IE 8/9/10/11.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * Don't inherit the `font-weight` (applied by a rule above).
+ * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
+ */
+optgroup {
+  font-weight: bold;
+}
+
+/* Tables
+   ========================================================================== */
+/**
+ * Remove most spacing between table cells.
+ */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+@font-face {
+  font-family: 'PT Sans Narrow';
+  src: url("/fonts/ptsansnarrow.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PT Sans Narrow Bold';
+  src: url("/fonts/ptsansnarrowbold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.container:after, .index-content:after, .gallery__block:after, .feedback-form:after, .footer__left:after, .footer__right:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  line-height: 1.42;
+  text-transform: uppercase;
+  font-family: 'PT Sans Narrow Bold';
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-weight: normal;
+}
+
 p {
-	color: blue;
+  margin: 0;
+}
+
+.wrapper {
+  position: relative;
+  min-height: 100%;
+  min-width: 960px;
+  overflow: hidden;
+}
+
+.wrapper:after {
+  content: "";
+  display: block;
+  height: 193px;
+  margin: -193px 0 0 0;
+}
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.container__header {
+  padding: 27px 20px;
+}
+
+.header {
+  background: #000;
+}
+
+.header-menu {
+  float: left;
+  width: 80%;
+}
+
+.nav {
+  font-size: 0;
+}
+
+.nav__item {
+  margin: 0 0 0 40px;
+  font-size: 16px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.nav__item:first-child {
+  margin: 0;
+}
+
+.nav__link {
+  color: #fff;
+}
+
+.header-user {
+  float: right;
+  width: 20%;
+  text-align: right;
+}
+
+.user-block {
+  display: inline-block;
+  width: 66px;
+}
+
+.user-block__link {
+  display: block;
+  color: #fff;
+  background: url(../img/icons/user-log.png) 0 3px no-repeat;
+}
+
+.main {
+  padding: 60px 0 0 0;
+  background: #070707 url(../img/background.png) 0 0 no-repeat;
+}
+
+.main-logo {
+  margin: 0 0 56px 0;
+}
+
+.logo-big {
+  display: block;
+  margin: 0 auto;
+}
+
+.features {
+  margin: 0 0 90px 0;
+  color: #fff;
+}
+
+.features__list {
+  font-size: 0;
+  text-align: center;
+}
+
+.features__item {
+  width: 33.3%;
+  font-size: 16px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.features__content {
+  position: relative;
+  padding: 0 20px;
+}
+
+.features__title {
+  margin: 0 0 64px;
+  font-size: 30px;
+}
+
+.features__title:after {
+  content: "";
+  position: absolute;
+  top: 55px;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+  background: #fff;
+  transform: rotate(45deg);
+}
+
+.features__content p {
+  font-size: 14px;
+  line-height: 24px;
+  font-family: 'PT Sans Narrow';
+}
+
+.index-content {
+  padding: 45px 80px;
+  margin: 0 0 35px 0;
+  background: #f7f4f1 url(../img/pattern/light.png) repeat;
+}
+
+.index-content:last-child {
+  margin: 0 0 65px;
+}
+
+.index-content__left,
+.index-content__right {
+  float: left;
+  width: 50%;
+}
+
+.index-content__right {
+  padding: 0 0 0 95px;
+}
+
+.news__list {
+  margin: 0 0 40px;
+}
+
+.index-content__title {
+  margin: 0 0 20px 0;
+  font-size: 30px;
+  color: #000;
+  font-weight: bold;
+}
+
+.news__item {
+  margin: 0 0 25px;
+}
+
+.news__item:last-child {
+  margin: 0;
+}
+
+.news__item p {
+  margin: 0 0 5px;
+}
+
+.news__item time {
+  text-transform: none;
+}
+
+.gallery__content {
+  width: 300px;
+  height: 180px;
+  margin: 0 0 38px 0;
+  border: 7px solid #fff;
+}
+
+.gallery__img {
+  width: 100%;
+  height: 100%;
+}
+
+.btns {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 12px 50px;
+  font-size: 14px;
+  text-transform: uppercase;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.btns:hover {
+  background: #663d15;
+}
+
+.gallery-prev {
+  float: left;
+}
+
+.gallery-next {
+  float: right;
+}
+
+.contacts__desc {
+  margin: 0 0 40px;
+}
+
+.contacts__desc p {
+  margin: 0 0 25px;
+}
+
+.feedback-form input {
+  display: block;
+  width: 140px;
+  padding: 10px 15px;
+  border: 2px solid black;
+  margin: 0 0 20px;
+}
+
+.feedback-form input:nth-child(odd) {
+  float: left;
+}
+
+.feedback-form input:nth-child(even) {
+  float: right;
+}
+
+.feedback-form button {
+  width: 100%;
+}
+
+.footer {
+  height: 193px;
+  padding: 60px 0 0;
+  color: #fff;
+  font-size: 14px;
+  background: #242424 url(../img/pattern/dark.png) repeat;
+}
+
+.footer__left {
+  float: left;
+  width: 60%;
+}
+
+.footer-contacts {
+  float: left;
+  width: 70%;
+  line-height: 24px;
+}
+
+.contacts__link {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.footer-socials {
+  float: right;
+  width: 30%;
+  text-align: center;
+}
+
+.socials__title {
+  display: block;
+  margin: 0 0 20px;
+}
+
+.socials__list {
+  font-size: 0;
+}
+
+.socials__item {
+  font-size: 16px;
+  margin: 0 0 0 4px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.socials__item:first-child {
+  margin: 0;
+}
+
+.socials__link {
+  display: block;
+  width: 43px;
+  height: 43px;
+  text-indent: -9999px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.socials__link-vk {
+  background: #000 url("../img/icons/vk.png") 8px 14px no-repeat;
+}
+
+.socials__link-vk:hover {
+  background: #fff url("../img/icons/vk-hover.png") 8px 14px no-repeat;
+}
+
+.socials__link-fb {
+  background: #000 url("../img/icons/fb.png") 15px 10px no-repeat;
+}
+
+.socials__link-fb:hover {
+  background: #fff url("../img/icons/fb-hover.png") 15px 10px no-repeat;
+}
+
+.socials__link-ig {
+  background: #000 url("../img/icons/ig.png") 11px 11px no-repeat;
+}
+
+.socials__link-ig:hover {
+  background: #fff url("../img/icons/ig-hover.png") 11px 11px no-repeat;
+}
+
+.footer__right {
+  float: right;
+  width: 40%;
+  text-align: center;
+}
+
+.footer-copyright {
+  float: right;
+}
+
+.copyright__link {
+  display: block;
+  padding: 15px 20px;
+  background: #000;
+  color: #fff;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.copyright__link:hover {
+  background: #fff;
+  color: #000;
+}
+
+.copyright__title {
+  display: block;
+  margin: 0 0 20px;
 }
