--- a/app/css/_misc/adjustment.scss
+++ b/app/css/_misc/adjustment.scss
@@ -1,14 +1,16 @@
 body, html {
 	width: 100%;
 	height: 100%;
+	color: #fff;
 	font-size: 16px;
 	line-height: 1.42;
 	text-transform: uppercase;
-	@include narrow(bold);
+	background: #000 url(../img/background.png) no-repeat center top;
 }
 
 body {
-	-webkit-font-smoothing: antialiased; 
+	-webkit-font-smoothing: antialiased;
+	@include narrow(bold);
 }
 
 * {
@@ -35,4 +37,33 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
 	margin: 0;
+}
+
+button, input {
+	outline: none;
+}
+
+.inner-page {
+	color: #000;
+	background: #000 url(../img/pattern/light.png) repeat;
+}
+
+.wrapper {
+	position: relative;
+	min-height: 100%;
+	min-width: 960px;
+	overflow: hidden;
+
+	&:after {
+		content: "";
+		display: block;
+		height: 193px;
+		margin: -193px 0 0 0;
+	}
+}
+
+.container {
+	width: 940px;
+	margin: 0 auto;
+	@extend %clearfix;
 }
