--- a/app/css/sections/header.scss
+++ b/app/css/sections/header.scss
@@ -1,4 +1,5 @@
 .header {
+	color: #fff;
 	background: #000;
 }
 
@@ -9,20 +10,57 @@
 
 .nav {
 	font-size: 0;
+	@extend %clearfix;
+}
+
+.header-logo {
+	float: left;
+}
+
+.logo {
+	display: block;
+	padding: 23px 20px;
+}
+
+.nav_list {
+	float: left;
 }
 
 .nav__item {
-	margin: 0 0 0 40px;
 	font-size: 16px;
 	@include inlineblock(middle);
+}
 
-	&:first-child {
-		margin: 0;
+.active {
+	position: relative;
+
+	&:hover {
+		.nav__link {
+			background: none;
+		}
+	}
+
+	&::after {
+		content: "";
+		position: absolute;
+		height: 5px;
+		bottom: 0;
+		left: 20px;
+		right: 20px;
+		background: #fff;
 	}
 }
 
 .nav__link {
+	display: block;
+	padding: 25px 20px;
+	line-height: 20px;
 	color: #fff;
+	@include transition(.2s);
+
+	&:hover {
+		background: $darkgrey;
+	}
 }
 
 .header-user {
@@ -33,11 +71,34 @@
 
 .user-block {
 	display: inline-block;
-	width: 66px;
+
 }
 
 .user-block__link {
 	display: block;
+	position: relative;
+	padding: 25px 20px 25px 50px;
+	line-height: 20px;
 	color: #fff;
-	background: url(../img/icons/user-log.png) 0 3px no-repeat;
+	@include transition(.2s);
+
+	&:hover {
+		background: $darkgrey;
+
+		&::before {
+		    opacity: 1;
+		}
+	}
+
+	&::before {
+	    content: "";
+	    position: absolute;
+	    top: 28px;
+	    right: 65px;
+	    width: 20px;
+	    height: 20px;
+	    opacity: .3;
+	    background: url(../img/icons/user-log.png) 0 0 no-repeat;
+	    @include transition(.2s);
+	}
 }
