--- a/app/css/_misc/fonts.scss
+++ b/app/css/_misc/fonts.scss
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'PT Sans Narrow';
-    src: url('/fonts/ptsansnarrow.woff') format('woff');
+    src: url('../fonts/ptsansnarrow.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'PT Sans Narrow Bold';
-    src: url('/fonts/ptsansnarrowbold.woff') format('woff');
+    src: url('../fonts/ptsansnarrowbold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
