--- a/app/css/_misc/mixins.scss
+++ b/app/css/_misc/mixins.scss
@@ -18,6 +18,20 @@
 	transition: $tr;
 }	
 
+@mixin box-shadow($shadow) {
+	-webkit-box-shadow: $shadow;
+	-moz-box-shadow: $shadow;
+	-o-box-shadow: $shadow;
+	box-shadow: $shadow;
+}
+
+@mixin border-radius($radius) {
+	-webkit-border-radius: $radius;
+	-moz-border-radius: $radius;
+	-o-border-radius: $radius;
+	border-radius: $radius;
+}
+
 %clearfix {
 	&:after {
 		content: "";
