--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -12,5 +12,8 @@ $brown: #663d15;
 // styles
 @import "sections/header";
 @import "sections/index";
-@import "sections/inner";
+@import "sections/price";
+@import "sections/shop";
 @import "sections/footer";
+@import "sections/modal";
+@import "sections/animation";
