--- a/app/css/sections/footer.scss
+++ b/app/css/sections/footer.scss
@@ -1,5 +1,8 @@
 .footer {
+	position: relative;
 	height: 193px;
+	min-width: 960px;
+	margin: -193px 0 0;
 	padding: 60px 0 0;
 	color: #fff;
 	font-size: 14px;
