--- a/app/css/sections/header.scss
+++ b/app/css/sections/header.scss
@@ -3,7 +3,7 @@
 	background: #000;
 }
 
-.header-menu {
+.header__menu {
 	float: left;
 	width: 80%;
 }
@@ -13,13 +13,18 @@
 	@extend %clearfix;
 }
 
-.header-logo {
+.nav__logo {
 	float: left;
 }
 
 .logo {
-	display: block;
+	display: inline-block;
 	padding: 23px 20px;
+}
+
+.logo__img {
+	max-width: 115px;
+	max-height: 25px;
 }
 
 .nav_list {
@@ -63,18 +68,18 @@
 	}
 }
 
-.header-user {
+.header__user {
 	float: right;
 	width: 20%;
 	text-align: right;
 }
 
-.user-block {
+.user {
 	display: inline-block;
 
 }
 
-.user-block__link {
+.user__link {
 	display: block;
 	position: relative;
 	padding: 25px 20px 25px 50px;
