--- a/app/css/main.css
+++ b/app/css/main.css
@@ -395,19 +395,19 @@ th {
 
 @font-face {
   font-family: 'PT Sans Narrow';
-  src: url("/fonts/ptsansnarrow.woff") format("woff");
+  src: url("../fonts/ptsansnarrow.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PT Sans Narrow Bold';
-  src: url("/fonts/ptsansnarrowbold.woff") format("woff");
+  src: url("../fonts/ptsansnarrowbold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
-.container:after, .nav:after, .index-content:after, .feedback-form:after, .inner__coloms:after, .about__coloms:after, .footer__left:after, .footer__right:after {
+.container:after, .nav:after, .index-content:after, .feedback-form:after, .inner__coloms:after, .about__coloms:after, .footer__left:after, .footer__right:after, .popup__form:after {
   content: "";
   display: table;
   clear: both;
@@ -474,7 +474,6 @@ button, input {
   content: "";
   display: block;
   height: 193px;
-  margin: -193px 0 0 0;
 }
 
 .container {
@@ -482,12 +481,21 @@ button, input {
   margin: 0 auto;
 }
 
+.form__input {
+  display: block;
+  border: 2px solid #000;
+}
+
+.form__input:focus {
+  border: 2px solid #663d15;
+}
+
 .header {
   color: #fff;
   background: #000;
 }
 
-.header-menu {
+.header__menu {
   float: left;
   width: 80%;
 }
@@ -496,13 +504,18 @@ button, input {
   font-size: 0;
 }
 
-.header-logo {
+.nav__logo {
   float: left;
 }
 
 .logo {
-  display: block;
+  display: inline-block;
   padding: 23px 20px;
+}
+
+.logo__img {
+  max-width: 115px;
+  max-height: 25px;
 }
 
 .nav_list {
@@ -548,17 +561,17 @@ button, input {
   background: #242424;
 }
 
-.header-user {
+.header__user {
   float: right;
   width: 20%;
   text-align: right;
 }
 
-.user-block {
+.user {
   display: inline-block;
 }
 
-.user-block__link {
+.user__link {
   display: block;
   position: relative;
   padding: 25px 20px 25px 50px;
@@ -570,15 +583,15 @@ button, input {
   transition: 0.2s;
 }
 
-.user-block__link:hover {
+.user__link:hover {
   background: #242424;
 }
 
-.user-block__link:hover::before {
+.user__link:hover::before {
   opacity: 1;
 }
 
-.user-block__link::before {
+.user__link::before {
   content: "";
   position: absolute;
   top: 28px;
@@ -604,6 +617,8 @@ button, input {
 .logo-big {
   display: block;
   margin: 0 auto;
+  max-width: 370px;
+  max-height: 170px;
 }
 
 .features {
@@ -671,7 +686,7 @@ button, input {
 }
 
 .index-content__right {
-  padding: 0 0 0 95px;
+  padding: 0 0 0 90px;
 }
 
 .news__list {
@@ -784,23 +799,17 @@ button, input {
   margin: 0 0 25px;
 }
 
-.feedback-form input {
-  display: block;
+.feedback-form__input {
   width: 140px;
   padding: 10px 15px;
-  border: 2px solid #000;
   margin: 0 0 20px;
 }
 
-.feedback-form input:focus {
-  border: 2px solid #663d15;
-}
-
-.feedback-form input:nth-child(odd) {
+.feedback-form__input:nth-child(odd) {
   float: left;
 }
 
-.feedback-form input:nth-child(even) {
+.feedback-form__input:nth-child(even) {
   float: right;
 }
 
@@ -822,7 +831,7 @@ button, input {
 }
 
 .inner__title {
-  padding: 0 0 25px 0;
+  margin: 0 0 15px 0;
   color: #000;
   font-size: 30px;
   line-height: 42px;
@@ -834,23 +843,7 @@ button, input {
   padding: 0 40px 0 0;
 }
 
-.current a {
-  color: #aba9a7;
-}
-
-.current a::after {
-  display: none;
-}
-
-.breadcrumbs__link {
-  color: #000;
-}
-
-.breadcrumbs__link:hover {
-  text-decoration: underline;
-}
-
-.breadcrumbs__link::after {
+.breadcrumbs__item::after {
   content: "";
   position: absolute;
   top: 7px;
@@ -859,6 +852,22 @@ button, input {
   height: 8px;
   background: #000;
   transform: rotate(45deg);
+}
+
+.breadcrumbs__item:last-child::after {
+  display: none;
+}
+
+.current a {
+  color: #aba9a7;
+}
+
+.breadcrumbs__link {
+  color: #000;
+}
+
+.breadcrumbs__link:hover {
+  text-decoration: underline;
 }
 
 .content__heading {
@@ -959,8 +968,21 @@ button, input {
   line-height: 24px;
 }
 
+.inner__coloms-left--shop {
+  float: left;
+  width: 220px;
+}
+
+.inner__coloms-right--shop {
+  float: right;
+  width: 700px;
+}
+
 .footer {
+  position: relative;
   height: 193px;
+  min-width: 960px;
+  margin: -193px 0 0;
   padding: 60px 0 0;
   color: #fff;
   font-size: 14px;
@@ -1077,4 +1099,203 @@ button, input {
 .copyright__title {
   display: block;
   margin: 0 0 20px;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 100px;
+  right: 50%;
+  z-index: 20;
+  margin-right: -230px;
+  width: 460px;
+  padding: 40px 80px;
+  color: #000;
+  font-size: 14px;
+  background: url(../img/pattern/light.png) repeat;
+  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.75);
+  -o-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.75);
+}
+
+.popup--show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.popup--error {
+  animation: shake 0.6s;
+}
+
+.modal__close {
+  position: absolute;
+  top: 0;
+  right: -34px;
+  width: 22px;
+  height: 22px;
+  background: none;
+  font-size: 0;
+  border: none;
+}
+
+.modal__close::before, .modal__close::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 19px;
+  height: 3px;
+  background: #d0d0d0;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -o-border-radius: 1px;
+  border-radius: 1px;
+}
+
+.modal__close::before {
+  transform: rotate(45deg);
+}
+
+.modal__close::after {
+  transform: rotate(135deg);
+}
+
+.popup__title {
+  margin: 0 0 17px;
+  font-size: 30px;
+}
+
+.popup__desc {
+  margin: 0 0 15px;
+  font-size: 14px;
+}
+
+.popup__input {
+  width: 100%;
+  margin: 0 0 9px;
+  padding: 10px 40px 10px 15px;
+}
+
+.checkbox {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.checkbox__input {
+  position: absolute;
+  display: inline-block;
+  vertical-align: middle;
+  top: 0;
+  left: -150px;
+}
+
+.checkbox__input:checked + .checkbox__fake::before, .checkbox__input:checked + .checkbox__fake::after {
+  display: block;
+}
+
+.checkbox__fake {
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #000;
+}
+
+.checkbox__fake::before, .checkbox__fake::after {
+  content: "";
+  display: none;
+  position: absolute;
+  top: 10px;
+  left: 2px;
+  width: 16px;
+  height: 2px;
+  background: #000;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -o-border-radius: 1px;
+  border-radius: 1px;
+}
+
+.checkbox__fake::before {
+  transform: rotate(45deg);
+}
+
+.checkbox__fake::after {
+  transform: rotate(135deg);
+}
+
+.checkbox-text {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 0 0 10px;
+}
+
+.popup__link-restore {
+  display: inline-block;
+  vertical-align: middle;
+  float: right;
+  margin: 0 0 18px 0;
+  color: #000;
+}
+
+.popup__btn {
+  width: 100%;
+}
+
+.map {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 20;
+  margin: -288px 0 0 -393px;
+  width: 786px;
+  height: 576px;
+  background: #ccc;
+  border: 7px solid #fff;
+}
+
+.map--show {
+  display: block;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+  70% {
+    transform: translateY(30px);
+  }
+  90% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translateX(10px);
+  }
 }
